--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>cn.dreampie</groupId>
   <artifactId>coffeescript-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>1.0</version>
+  <version>1.1</version>
   <name>Coffee Script Maven Plugin</name>
   <description>Coffee Script Maven Plugin</description>
   <url>http://github.com/Dreampie/${project.name}</url>
@@ -74,6 +74,12 @@
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
       <version>${maven-plugin-api.version}</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>guava</artifactId>
+          <groupId>com.google.guava</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
